@@ -8,6 +8,8 @@
 
     <h3>Your Notifications:</h3>
 
+    <small><a href="{% url 'notifications:delete-all-notifications' %}">Clear all</a></small>
+
         {% for notification in notifications %}
 
             <!-- FOR LIKE --->
@@ -16,7 +18,9 @@
                     <hr>
                       <div>
                         <div>
-                            <a href="{% url 'notifications:delete-notification' id=notification.id %}" class="delete">Delete</a>
+                            <a href="{% url 'notifications:delete-notification' id=notification.id %}" class="delete">
+                                <img src="/media/social_media/notification-delete.png" alt="delete" style="height: 30px; width: 30px; float: right;">
+                            </a>
                             <br>
                             <img class="rounded-circle shadow-1-strong me-2" src="{{ notification.sender.avatar.url }}" alt="avatar" width="40px" height="40px">
                             <strong>{{ notification.sender.first_name }} {{ notification.sender.last_name }}</strong>
@@ -42,7 +46,9 @@
                     <hr>
                       <div>
                         <div>
-                            <a href="{% url 'notifications:delete-notification' id=notification.id %}" class="delete">Delete</a>
+                            <a href="{% url 'notifications:delete-notification' id=notification.id %}" class="delete">
+                                <img src="/media/social_media/notification-delete.png" alt="delete" style="height: 30px; width: 30px; float: right;">
+                            </a>
                             <br>
                             <img class="rounded-circle shadow-1-strong me-2" src="{{ notification.sender.avatar.url }}" alt="avatar" width="40px" height="40px">
                             <strong>{{ notification.sender.first_name }} {{ notification.sender.last_name }}</strong>
@@ -57,6 +63,25 @@
                       <div>
                           <strong>{{ notification.idea.title }}</strong>
                               <img src="{{ notification.idea.image.url }}" width="180px" height="100px">
+                      </div>
+            {% endif %}
+
+            <!-- FOR FOLLOW --->
+            {% if notification.notification_type == 4 and notification.sender.id != request.user.id %}
+
+                    <hr>
+                      <div>
+                        <div>
+                            <a href="{% url 'notifications:delete-notification' id=notification.id %}" class="delete">
+                                <img src="/media/social_media/notification-delete.png" alt="delete" style="height: 30px; width: 30px; float: right;">
+                            </a>
+                            <br>
+                            <img class="rounded-circle shadow-1-strong me-2" src="{{ notification.sender.avatar.url }}" alt="avatar" width="40px" height="40px">
+                            <strong>{{ notification.sender.first_name }} {{ notification.sender.last_name }}</strong>
+                            <small>@{{ notification.sender.username }}</small> Followed to You
+                            <br>
+                            <strong><small>{{ notification.date }}</small></strong>
+                        </div>
                       </div>
             {% endif %}
 
