@@ -13,6 +13,7 @@
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
         <li><a class="dropdown-item" href="{% url 'users:profile' pk=request.user.id %}">My Profile</a></li>
         <li><a class="dropdown-item" href="#">My Ideas</a></li>
+        <li><a class="dropdown-item" href="#">My Followers</a></li>
         <li><a class="dropdown-item" href="#">My Partnerships</a></li>
         <li><a class="dropdown-item" href="#">My Investments</a></li>
         <li><a class="dropdown-item" href="#">Favourite Ideas</a></li>
