@@ -98,12 +98,17 @@ User
 6 Июля:
 - Система подписок (Follower/Following)
 
+7 Июля:
+- Система уведомлений для Follow
+
 
 СДЕЛАТЬ ПОСЛЕ:
+- Уведомления для Comment
+- Фильтры для Ideas
 - Избранные Idea
 - Доработать меню пользователя
 - Система DM
-- Уведомления Follow, Favourite, Investment, Rating, Partnership, DM
+- Уведомления, Favourite, Investment, Rating, Partnership, DM
 - Сделать View для IdeaStatus (чтобы одним нажатием менялся статус)
 - Сделать View для Co-Authors
 - Сделать View для Investors
@@ -121,7 +126,6 @@ Create your own Idea if you have any
 - Доработать Partnership, Investment
 - Сделать Rating
 - Значки для групп
-- Система уведомлений
 - Обновить ссылки Footer
 - Попробовать подключить API платежи для Investments
 - Ветвление комментариев
